fixed spacing issue on sidepage

--- a/styles/sideStyle.scss
+++ b/styles/sideStyle.scss
@@ -11,7 +11,7 @@ body {
     // background-size: cover;
     background-color: black;
     display: flex;
-    // height: 100%;
+    height: 91vh;
 
 }
 
@@ -19,7 +19,8 @@ body {
 .contentHolder {
     display: flex;
     flex-direction: column;
-    width: 95%;
+    width: 100%;
+    height: 100vh;
 
 }
 
@@ -39,9 +40,8 @@ body {
     justify-content: space-evenly;
     align-items: center;
     color: white;
-    padding: 2% 0%;
-    // min-height: 100vh;
-    // max-height: min-content;
+    padding: 4.3vh 0%;
+    
     
     .menuIcon{
         flex-grow: 1;
@@ -109,13 +109,15 @@ body {
 
 .card-holder {
     display: flex;
+    flex-grow: 1;
+    width: 100%;
 }
 
 .card-holder-row {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 95%;
+    flex-grow: 1;
     
     
 }
@@ -128,14 +130,15 @@ body {
     flex-direction: column;
     align-items: center;
     // font-size: 27px;
-    width: 30%;
+    width: 33.33%;
     color: white;
-    width: 99%;
+    width: 99.6%;
     flex-grow: 1;
-}
-
-.cards > img {
-    width: auto;
     
 }
 
+.cards > img {
+    object-fit: contain;
+    max-width: 30%;
+    
+}
